fixed bug where donation link was not showing on mobile devices

--- a/philip-morgan-foundation/src/components/_Navbar.scss
+++ b/philip-morgan-foundation/src/components/_Navbar.scss
@@ -111,7 +111,7 @@ nav {
       padding-left: 5%;
       transition: .3s ease-in-out all;
 
-      & button:last-child {
+      & a:last-child {
         display: flex;
       }
 
